fixed spacing around images for about page

--- a/src/components/pages/About/aboutStyle.css
+++ b/src/components/pages/About/aboutStyle.css
@@ -1,7 +1,9 @@
 .aboutImage {
-    height: 25vh;
+    height: 26vh;
     width: auto;
     border-radius: 1rem;
+    max-width: 100%;
+    /* height: auto; */
 }
 
 .firstLetter {
